# qr-transfer

./: Cargo.toml  README.md
src/: chunker.rs  display.rs  main.rs  protocol.rs  receiver.rs  scanner.rs  sender.rs
