[package]
name    = "qr-transfer"
version = "0.1.0"
edition = "2021"
authors = ["adper"]
description = "File transfer over QR codes — stop-and-wait ARQ in the terminal"

[[bin]]
name = "qrt"
path = "src/main.rs"

[dependencies]
# Packet serialisation
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"

# File integrity
sha2 = "0.10"
hex  = "0.4"

# Binary encoding for chunk payloads
base64 = "0.22"

# QR generation (terminal unicode rendering built-in)
qrcode = "0.14"

# QR decoding from camera frames
rqrr  = "0.8"

# Camera capture — uses the native OS backend
image  = "0.25"
nokhwa = { version = "0.10", features = ["input-native"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal control (clear, cursor, colour)
crossterm = "0.27"

# Error ergonomics
anyhow = "1"
